# system-prompt-learning

./: .gitignore  DESIGN_A2.md  PRODUCT_THESIS.md  PROMPT_LEARNING_SYSTEM.md  SPEC_PHASE1_ORCHESTRATOR.md  end.md
ai-learning-system/_system/: PILOT_RUNBOOK.md  README.md  audit.py  commands.md  fsrs_config.yaml  pyproject.toml  requirements.txt  selfcheck.py
ai-learning-system/_system/change_requests/: changelog.md
ai-learning-system/_system/change_requests/approved/: cr-0001-fsrs-spec-v2.6.md  cr-0002-test-readonly.md  cr-0003-resume-opens-session.md  cr-0004-sources-added-not-future.md  cr-0005-topic-roadmap.md  cr-0006-review-session-record.md  cr-0007-curriculum-exam-schema.md  (+8 more)
ai-learning-system/_system/decisions/: README.md  decisions.md  deviations.md  index.yaml  notes.md  tradeoffs.md
ai-learning-system/_system/migrations/: README.md  executor.py  planner.py
ai-learning-system/_system/prompts/: router_prompt.md  system_change_prompt.md  system_prompt.md
ai-learning-system/_system/rules/: anti_drift_rules.md  claim_rules.md  memory_rules.md  review_rules.md  teaching_rules.md  validation_rules.md
ai-learning-system/_system/schemas/: blueprint.schema.md  curriculum.schema.md  exam_results.schema.md  lesson_state.schema.md  review_item.schema.md  sources.schema.md  topic_state.schema.md  vault_state.schema.md
ai-learning-system/_system/templates/: README.md
ai-learning-system/_system/validator/: canonical.py  fsrs_adapter.py  md_ast.py  models.py  schedule.py  session.py  spike_fsrs.py  transaction.py  validate.py  vault_io.py  views.py
(+138 files in other folders)
